# gplab

routine_ai/: README.md  pubspec.yaml
routine_ai/admin_app/: README.md  app.py  requirements.txt
routine_ai/android/app/: build.gradle.kts
routine_ai/backend/: .env.sample  README.md  pyproject.toml  requirements.txt  routine.db
routine_ai/backend/app/: config.py  db.py  deps.py  main.py
routine_ai/backend/app/models/: base.py  pet_state.py  routine.py  routine_log.py  stats_cache.py  user.py
routine_ai/backend/app/routes/: admin.py  coach.py  pet.py  recommend.py  routine.py  stats.py
routine_ai/backend/app/schemas/: coach.py  pet.py  recommend.py  routine.py  stats.py
routine_ai/backend/app/services/: ollama_client.py  pet_state_service.py  progress_service.py
routine_ai/ios/Runner/: Info.plist
routine_ai/ios/Runner.xcodeproj/: project.pbxproj
routine_ai/lib/: constants.dart  main.dart
routine_ai/lib/data/: coach_templates.json
routine_ai/lib/models/: coach_message.dart  routine_item.dart  routine_progress.dart  weekly_day_status.dart
routine_ai/lib/providers/: app_state.dart
routine_ai/lib/screens/: calendar_screen.dart  create_routine_screen.dart  home_screen.dart  recommend_screen.dart  settings_screen.dart  social_screen.dart  stats_screen.dart
routine_ai/lib/services/: api_client.dart
routine_ai/lib/theme/: tokens.dart
routine_ai/linux/: CMakeLists.txt
routine_ai/server/: .env  main.py  requirements.txt
routine_ai/test/: widget_test.dart
routine_ai/web/: index.html  manifest.json
routine_ai/windows/: CMakeLists.txt
(+19 files in other folders)
