[project]
name = "routine-ai-backend"
version = "0.1.0"
description = "FastAPI + SQLite backend for the Routine AI prototype"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.110.0",
  "uvicorn[standard]==0.27.1",
  "sqlalchemy==2.0.29",
  "aiosqlite==0.20.0",
  "httpx==0.27.0",
  "pydantic==2.7.1",
  "pydantic-settings==2.2.1",
  "python-dotenv==1.0.1",
]

[tool.uvicorn]
app = "app.main:app"
host = "127.0.0.1"
port = 8000
reload = true
